[gd_scene load_steps=4 format=3 uid="uid://bccj8aiwcfrxg"]

[ext_resource type="Script" uid="uid://imlrrckrjebu" path="res://scripts/power_up.gd" id="1_768ry"]
[ext_resource type="AudioStream" uid="uid://d33nksm4imxsh" path="res://assets/sounds/power_up.wav" id="2_4vdha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4vc2"]
size = Vector2(17, 3.5)

[node name="PowerUpHitbox" type="Area2D"]
script = ExtResource("1_768ry")

[node name="PickedUpPowerUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4vdha")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_y4vc2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="power_up_hitbox_hit" from="." to="." method="_on_power_up_hitbox_hit"]
